--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -1,12 +1,17 @@
 // Stone
 $primary: #336B87;
+
+// Steel Blue
+//$primary: #4a6fa5;
+
+// Muted Teal
+// $primary: #4e857e;
+
+// Deep Indigo
+//$primary: #5b5f97;
+
 $enable-rounded: false;
-
-$sidebar-bg: rgb(23, 23, 23);
-$body-bg-dark: rgb(33, 33, 33);
-
 $color-mode-type: data;
-
 $font-family-base: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
 
 @import "bootstrap/scss/bootstrap";
